force-app/main/default/objects/ServiceAppointment/fields/Geocode__c.field-meta.xml
<CustomField>
    <fullName>Geocode__c</fullName>
    <formula>IF(
	TEXT(Latitude) != &quot;0&quot;, 
	IF
	(
		Latitude &gt; 0 &amp;&amp; Latitude &lt; 1, 
		&quot;0&quot; &amp; TEXT(Latitude), 
		IF
		(
			Latitude &gt; -1 &amp;&amp; Latitude &lt; 0, 
			&quot;-0&quot; &amp; MID(TEXT(Latitude), 2, LEN(TEXT(Latitude)) - 1),
			TEXT(Latitude)
		)
	) 
	&amp; &quot;, &quot; &amp; 
	IF
	(
		Longitude &gt; 0 &amp;&amp; Longitude &lt; 1, 
		&quot;0&quot; &amp; TEXT(Longitude), 
		IF
		(
			Longitude &gt; -1 &amp;&amp; Longitude &lt; 0, 
			&quot;-0&quot; &amp; MID(TEXT(Longitude), 2, LEN(TEXT(Longitude)) - 1),
			TEXT(Longitude)
		)
	)
	&amp; &quot; (&quot; &amp; TEXT(GeocodeAccuracy) &amp; &quot;)&quot;,
	&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geocode</label>
    <type>Text</type>
</CustomField>