force-app/main/default/objects/ServiceAppointment/fields/Geocoding_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Last_Update__c</fullName>
    <label>Geocoding Last Update</label>
    <type>DateTime</type>
</CustomField>