force-app/main/default/objects/ServiceAppointment/fields/Geocoding_Message__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Message__c</fullName>
    <label>Geocoding Message</label>
    <type>TextArea</type>
</CustomField>